CLAS-566: Using UUID7 for claim ID.
