# openapi/claim/v3/api-docs.json
@@ -31,8 +31,8 @@
             "description": "ID of the claim to update",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -416,8 +416,8 @@
             "description": "ID of the claim to add evidence to",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -550,8 +550,8 @@
             "description": "ID of the claim to add evidence to",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           },
           {
@@ -560,8 +560,8 @@
             "description": "ID of the line item to add evidence to",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -694,8 +694,8 @@
             "description": "ID of the claim",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           },
           {
@@ -704,8 +704,8 @@
             "description": "ID of the line item to link to",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -716,8 +716,8 @@
                 "type": "array",
                 "description": "IDs of the evidence to link",
                 "items": {
-                  "type": "integer",
-                  "format": "int64"
+                  "type": "string",
+                  "format": "uuid"
                 }
               }
             }
@@ -835,8 +835,8 @@
             "description": "ID of the claim to retrieve",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -956,8 +956,8 @@
             "description": "ID of the claim to delete",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -1072,8 +1072,8 @@
             "description": "ID of the claim",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           },
           {
@@ -1082,8 +1082,8 @@
             "description": "ID of the line item to unlink from",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           },
           {
@@ -1092,8 +1092,8 @@
             "description": "ID of the evidence to unlink",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -1208,8 +1208,8 @@
             "description": "ID of the claim",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           },
           {
@@ -1218,8 +1218,8 @@
             "description": "ID of the evidence to delete",
             "required": true,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -1359,11 +1359,6 @@
           "claimed": {
             "type": "number",
             "description": "amount claimed"
-          },
-          "submissionId": {
-            "type": "string",
-            "format": "uuid",
-            "description": "id of the submission this claim links to"
           }
         },
         "required": [
@@ -1466,8 +1461,8 @@
         "type": "object",
         "properties": {
           "evidenceId": {
-            "type": "integer",
-            "format": "int64"
+            "type": "string",
+            "format": "uuid"
           },
           "file": {
             "$ref": "#/components/schemas/UploadFile"
@@ -1490,8 +1485,8 @@
         "type": "object",
         "properties": {
           "id": {
-            "type": "integer",
-            "format": "int64"
+            "type": "string",
+            "format": "uuid"
           },
           "ufn": {
             "type": "string",
@@ -1531,11 +1526,6 @@
             "type": "number",
             "description": "amount claimed"
           },
-          "submissionId": {
-            "type": "string",
-            "format": "uuid",
-            "description": "id of the submission this claim belongs to"
-          },
           "lineItems": {
             "type": "array",
             "description": "line items associated with the claim",
@@ -1552,8 +1542,7 @@
           }
         },
         "required": [
-          "id",
-          "submissionId"
+          "id"
         ]
       },
       "ClaimEvidence": {
@@ -1566,9 +1555,13 @@
             "type": "integer",
             "format": "int64"
           },
+          "submittedOn": {
+            "type": "string",
+            "format": "date-time"
+          },
           "id": {
-            "type": "integer",
-            "format": "int64"
+            "type": "string",
+            "format": "uuid"
           }
         },
         "required": [
@@ -1618,13 +1611,13 @@
           "evidenceItems": {
             "type": "array",
             "items": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string",
+              "format": "uuid"
             }
           },
           "id": {
-            "type": "integer",
-            "format": "int64"
+            "type": "string",
+            "format": "uuid"
           }
         },
         "required": [
